<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_MachineStates" Id="{f3682b95-32d3-463a-bd62-ececb9b39ec1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MachineStates :
(
	INIT 			:= 100,         // Inicialização 
    CHECK_AIR_FLOW 	:= 110,         // Verificação do fluxo de ar 
    HARDWARE_INIT 	:= 120,         // Inicialização do hardware 
    SEAL_STAGES 	:= 130,         // Selagem dos pratos/estágios 
    LEAK_TEST 		:= 140,         // Teste de vazamento 
    RECOVERY_PHASE 	:= 150,         // Etapa de recuperação 
    WASHING_PHASE 	:= 160,         // Etapa de lavagem 
    DRYING_PHASE 	:= 170,         // Etapa de secagem 
    POST_EXECUTION 	:= 180,         // Pós-execução 
    ERROR_STATE 	:= 99           // Estado de erro 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>