<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EP9208" Id="{55e06dc4-9c3f-4959-8bac-04e032f67e79}">
    <Declaration><![CDATA[TYPE ST_EP9208 EXTENDS ST_Motor :
STRUCT
	//VICI Valves connected to EP9208-1035
	
	//New Variables
	rHomeVel      : LREAL;   // Homing Speed
	rHomeAcc	  : LREAL;   // Homing Acceleration	
	rHomeDec	  : LREAL;   // Homing Speed Deceleration
    rTargetPos    : LREAL;   // Absolute target position
    rTargetVel    : LREAL;   // Absolute target speed
    rAcceleration : LREAL;   // Default Acceleration for movements
    rDeceleration : LREAL;   // Default Deceleration for movements
	rValvePositionAngle : ARRAY[1..6] OF LREAL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>