<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL3058" Id="{dd510e53-85d2-4664-a123-0c4e400c197f}">
    <Declaration><![CDATA[TYPE ST_EL3058 :
STRUCT
	//FESTO Main Air Pressure Supply Indicator
	rMainPressureSupplyInput 		: INT;  	// Main Pressure Supply (*AT I1*)
	bMainPressureSupplyError		: BOOL;		// Main Pressure Supply Error Status
	
	//SMC Pressure Regulator [Leak Detection]
    rPressureRegulatorInput			: INT;  	// Pressure Regulator (*AT I3*)
	bPressureRegulatorError			: BOOL;		// Pressure Regulator Error Status
	
	//2-channel analog input
	rLeakTestPressureSensor	:	INT; 	//SMC low differential pressure sensor (*AT I2*)
	bLeakTestSensorError	:	BOOL;	//SMC low differential pressure sensor Error Flag
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>