<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_MachineParam" Id="{7fcbda61-1efa-47f4-8a74-d81c27375a8d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	HMI_Param : ST_HMIParameters;
	
	//Stage Collection Motor Parameters
	aM1Position : ARRAY[1..3] OF INT; //Positions of the motor - [ 1 Home Position | 2 Seal Position | 3 Dry Position]
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>